# RisuAI

./: .gitignore  package.json  pnpm-lock.yaml
src/: preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/lib/UI/: ModelList.svelte
src/ts/: update.ts  util.ts
src/ts/drive/: backuplocal.ts  drive.ts
src/ts/process/models/: local.ts
src/ts/storage/: accountStorage.ts  autoStorage.ts  globalApi.ts  risuSave.ts
