[package]
name = "risuai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset", "devtools"] }
serde_json = "1.0"
tiktoken-rs = "0.4.0"
base64 = "0.21.0"
reqwest = { version = "0.11.16", features = ["json"] }
darling = "0.20.3"
zip = "0.6.6"
tar = "0.4.40"
eventsource-client = "0.12.2"
futures = "0.3.30"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-process = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-http = "2.0.0-beta.10"
tauri-plugin-updater = "2.0.0-beta.8"
tauri-plugin-os = "2.0.0-beta.6"
flate2 = "1.0.30"
anyhow = "1.0.86"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
